@@ -22,6 +22,7 @@ Version 6.6 - not yet released
   - show required glide ratio in waypoint details (#1573)
   - add airspace ack button to map item list (#2139)
   - additionally show airspace altitude in feet (#2379)
+  - show more files in replay file picker (#2582)
 * tasks
   - MAT tasks (#563)
   - custom symmetric quadrant (#2125)
